--- a/dependency-injection/build.gradle
+++ b/dependency-injection/build.gradle
@@ -12,8 +12,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.mockito:mockito-core:2.8.47'
-    compile 'org.springframework:spring-core:4.3.9.RELEASE'
-    compile 'org.springframework:spring-beans:4.3.9.RELEASE'
-    compile 'org.springframework:spring-context:4.3.9.RELEASE'
-    compile 'org.springframework:spring-test:4.3.9.RELEASE'
+    compile "org.springframework:spring-core:$spring_version"
+    compile "org.springframework:spring-beans:$spring_version"
+    compile "org.springframework:spring-context:$spring_version"
+    compile "org.springframework:spring-test:$spring_version"
 }
